<resources>
    <string name="app_name">Loutaro</string>
    <string name="sign_up_now">Don\'t have an account yet ? sign up now</string>
    <string name="log_in">Log In</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="have_an_account">Don’t have an account ?</string>
    <string name="complete_your_free_account_setup">Complete your free account setup</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="register_as_freelancer">Register as freelancer</string>
    <string name="register_as_business_man">Register as business man</string>
    <string name="login_as_freelancer">Login as freelancer</string>
    <string name="login_as_business_man">Login as business man</string>
    <string name="country">Country</string>
    <string name="select_country">Select country</string>
    <string name="verify_email">Verify Email</string>
    <string name="info_to_verify_email">An email has been sent to your email %s. Please click on that link to verify your email address</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="tell_us_about_the_work_you_do">Tell us about the work you do</string>
    <string name="what_is_the_main_service_you_offer">What is the main service you offer</string>
    <string name="service">Service</string>
    <string name="select_your_skills">Select your skills</string>
    <string name="about">About</string>
    <string name="professional_overview">Professional Overview</string>
    <string name="submit">Submit</string>
    <string name="add_skill">Add Skill</string>
    <string name="alert_add_your_skill">Add Your Skills</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="create_profile">Create Profile</string>
    <string name="required">%s is required</string>
    <string name="fee_is_required_and_must_greather_than_zero">%s is required and must be greater than zero</string>
    <string name="search_country">Search country</string>
    <string name="still_have_data_not_fill">There are still data that you haven\'t filled in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="message_email_not_verified_yet">Sorry, it looks like you haven\'t verified your email</string>
    <string name="project_tab">Project</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="Saved_tab">Saved</string>
    <string name="profile_tab">Profile</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="please_wait">Please Wait…</string>
    <string name="click_back_again_to_exit">Please click back again to exit</string>
    <string name="uploading">Uploading…</string>
    <string name="uploaded">Uploaded %d%%</string>
    <string name="budget">Budget $%d</string>
    <string name="posted_time">Posted %s</string>
    <string name="detail_project">Project details</string>
    <string name="task_price"><![CDATA[Task & Price]]></string>
    <string name="task_price_freelancer">"Freelancer %d - \$%d"</string>
    <string name="apply_as_freelancer">Apply as freelancer %d</string>
    <string name="you_apply_as_freelancer">You apply as freelancer %d</string>
    <string name="skills_expertise">Skills and Expertise</string>
    <string name="active_tab_title">Active</string>
    <string name="finish_tab_title">Finish</string>
    <string name="let_s_discover_your_next_projects">let\'s discover your next projects</string>
    <string name="let_s_discover_your_next_freelancer">let\'s discover your next freelancer</string>
    <string name="search_result_not_found_project">Sorry, it looks like the project you are looking for doesn\'t exist</string>
    <string name="search_result_not_found_freelancer">Sorry, it looks like freelancer you are looking for doesn\'t exist</string>
    <string name="search_project">Search project</string>
    <string name="search_freelancer">Search freelancer</string>
    <string name="portofolio">Portofolio</string>
    <string name="skill">Skill</string>
    <string name="name_and_job">%s - %s</string>
    <string name="dont_have_active_project">Sorry, it looks like you don\'t have any active projects at the moment</string>
    <string name="dont_have_pending_project">Sorry, it looks like you don\'t have any pending projects at the moment</string>
    <string name="dont_have_finished_project">Sorry, it looks like you haven\'t finished any projects yet</string>
    <string name="contact">Contact</string>
    <string name="please_update_your_profile">Your %s will be displayed here, so please update your profile.</string>
    <string name="update_profile">Update profile</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="telegram">Telegram</string>
    <string name="loutar_shared_preferences" translatable="false">loutaro shared preferences</string>
    <string name="key_save_project" translatable="false">save_project</string>
    <string name="dont_have_saved_project_yet">Sorry, looks like you don\'t have a project saved yet</string>
    <string name="dont_have_saved_freelancer_yet">Sorry, it looks like you don\'t have any freelancer data saved yet</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="key_status_login" translatable="false">loutaro login</string>
    <string name="change_language">Change language</string>
    <string name="indonesia_language" translatable="false">Indonesia</string>
    <string name="english_language" translatable="false">English</string>
    <string name="save">Save</string>
    <string name="key_language_code" translatable="false">language code loutaro</string>
    <string name="never_miss_an_opportunity">Never miss an opportunity</string>
    <string name="find_any_job">Find any jobs that match your skills, chat and collaborate easily anywhere</string>
    <string name="find_interesting_project">Find your interesting project</string>
    <string name="stand_out_by_replying">Stand out by replying to clients quickly and get to work on the spot</string>
    <string name="global_talent_for_hire">A global talent network for hire</string>
    <string name="find_professional_freelancer">Find professional freelancers and agencies for any project you want to create</string>
    <string name="post_project_and_get_proposal">Post Projects and get proposals</string>
    <string name="interview_your_favorite_freelancer">Interview your favorite freelancers and choose the one that best fits your project</string>
    <string name="email_not_registered_as">Sorry, it seems that your email is not registered as a %s</string>
    <string name="value_freelancer" translatable="false">freelancer</string>
    <string name="freelancer">freelancer</string>
    <string name="value_business_man" translatable="false">business man</string>
    <string name="business_man">business man</string>
    <string name="key_loutaro_user_type_login" translatable="false">loutaro user type login</string>
    <string name="favorite_tab">Favorite</string>
    <string name="freelancer_details">Freelancer details</string>
    <string name="number_of_freelancer">Freelancer %d</string>
    <string name="create_project">Create project</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="just_budget">Budget</string>
    <string name="freelancer_needed">Freelancer needed</string>
    <string name="number_freelancer_at">Freelancer 1</string>
    <string name="fee">Fee</string>
    <string name="add_new_task">Add New Task</string>
    <string name="task">Task</string>
    <string name="are_you_sure_want_to_detele">Are you sure you want to delete this list card ?</string>
    <string name="are_you_sure_want_to_delete_project">Are you sure you want to delete this list project ?</string>
    <string name="members">Members</string>
    <string name="add_members">Add members</string>
    <string name="list_members">List members</string>
    <string name="have_not_add_member_yet">Sorry, it looks like you haven\'t added any members yet</string>
    <string name="member_add_succes">Member added successfully</string>
    <string name="are_you_sure_want_to_remove_this_member">Are you sure you want to remove this member</string>
    <string name="success_apples_as_freelancer">You are applying as a freelancer %d</string>
    <string name="cancel_apply_as_freelancer">You cancel apply as a freelancer %d</string>
    <string name="notification">Notification</string>
    <string name="whatsapp" translatable="false">whatsapp</string>
    <string name="board" translatable="false">Board</string>
    <string name="update_project" translatable="false">Update project</string>
    <string name="dont_have_any_message_yet">Sorry, it looks like you don\'t have any new messages yet</string>
    <string name="add_list">Add list</string>
    <string name="add_card">Add card</string>
    <string name="only_admin_can_add_member">Sorry, only admins can add members</string>
    <string name="only_freelancer_can_apply_project">Sorry, only freelancers can apply for projects</string>
    <string name="delete_project">Delete project</string>
    <string name="you_have_selected_all_skill">You have selected all the existing skills</string>
    <string name="freelancer_recommendation">Freelancer recommendation</string>
    <string name="recommendation_for_you">Recommendation for you</string>
    <string name="manage_kanban">Manage kanban</string>
    <string name="card_details">Card details</string>
    <string name="card_description">Card description</string>
    <string name="delete_card">Delete card</string>
    <string name="are_you_sure_want_to_delete_this_card">Are you sure want to delete this card ?</string>
    <string name="withdraw_to_your_paypal_email">Withdraw to your paypal email:</string>
    <string name="yes_withdraw_my_money">Yes, Withdraw My Money</string>
    <string name="withdraw_payment">Withdraw payment</string>
    <string name="pending_tab_title">Pending</string>
    <string name="payment">Payment</string>
    <string name="send_to_payment_loutaro_com_to_make_your_project_post_on_loutaro">Send to: payment@loutaro.com to make your project post on loutaro</string>
    <string name="you_already_confirm_payment">Your already confirm payment</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="success_confirm_payment_project">successfully confirmed the project payment</string>
    <string name="already_confirm_payment">Your already confirmed the project payment</string>
    <string name="amount">Amount</string>
    <string name="project_completed">Project completed</string>
    <string name="are_you_sure_want_to_change_project_to_completed">Are you sure you want to change the status of this project to complete ?</string>
    <string name="success_change_status_project_to_completed">Successfully changed the project status to completed</string>
    <string name="project_succes_to_delete">Project deleted successfully</string>
    <string name="list_all_freelancer">List all freelancer</string>
    <string name="confirm_applyers">Confirm applyers</string>
    <string name="success_add_applyers_to_project">successfully added a freelancer to the project</string>
    <string name="applyers">Applyers</string>
    <string name="balance">Balance</string>
    <string name="wait_admin_confirmation_withdrawal">Withdrawal is successful, please wait for admin confirmation</string>
    <string name="start_project">Start project</string>
</resources>