<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_tab"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_tab"/>

    <item android:id="@+id/project_tab"
        android:icon="@drawable/ic_baseline_lightbulb_24"
        android:title="@string/project_tab"/>

    <item android:id="@+id/search_tab"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_tab"/>

    <item android:id="@+id/saved_tab"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_tab"/>

    <item android:id="@+id/profile_tab"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile_tab"/>
</menu>